force-app/main/default/objects/Project_Task__c/fields/Project_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Project_Iteration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Iteration</label>
    <referenceTo>Project_Iteration__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>