force-app/main/default/objects/Project_Task__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>CASHIERING</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>PAGA</fullName>
            </value>
            <value>
                <fullName>PWCR</fullName>
            </value>
            <value>
                <fullName>RCI</fullName>
            </value>
            <value>
                <fullName>REGISTRATION</fullName>
            </value>
            <value>
                <fullName>SERVICE MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>WCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>