force-app/main/default/objects/Project_Task__c/fields/Task_Completion_Information__c.field-meta.xml
<CustomField>
    <fullName>Task_Completion_Information__c</fullName>
    <label>Task Completion Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>