force-app/main/default/objects/Project_Task__c/fields/Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Date__c</fullName>
    <label>Task Due Date</label>
    <type>DateTime</type>
</CustomField>